--- a/package.json
+++ b/package.json
@@ -9,17 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.8",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.9",
+    "@mui/material": "^5.14.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "apexcharts": "^3.41.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.0",
     "next": "13.4.12",
-    "postcss": "8.4.27",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "swr": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "20.4.8",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "prisma": "^5.1.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
