--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
     "lodash": "^4.17.21",
-    "next": "13.4.12",
+    "next": "^13.4.12",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
