--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@react-pdf/renderer": "^3.1.12",
     "@types/date-fns": "^2.6.0",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -28,15 +29,18 @@
     "lodash": "^4.17.21",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
+    "rc-slider": "^10.2.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
+    "react-textarea-autosize": "^8.5.2",
     "rippleui": "^1.12.1",
     "swr": "^2.2.0"
   },
@@ -45,6 +49,7 @@
     "@types/lodash": "^4.14.197",
     "@types/node": "20.4.8",
     "@types/react-date-range": "^1.4.4",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-lazy-load-image-component": "^1.5.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
